--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <div class="page__content">
       <header class="header page__section">
         <img
-          src=""
-          alt="Логотип проекта масто"
+          src="./images/logo.png"
+          alt="Логотип проекта место"
           class="logo header__logo"
         />
       </header>
@@ -23,7 +23,7 @@
         <section class="profile page__section">
           <div
             class="profile__image"
-            style="background-image: url('../images/avatar.jpg')"
+            style="background-image: url('./images/avatar.jpg')"
           ></div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
